welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:2: error: not found: type ==
  while (!(estFaceMur() && getDirection():Direction==Direction.EAST)) {
                                                   ^DwarfCode:2: error: type mismatch;
 found   : plm.universe.Direction
 required: Boolean
  while (!(estFaceMur() && getDirection():Direction==Direction.EAST)) {
                                       ^